fixed z-index conflicts with title card and modals

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -105,7 +105,7 @@ li {
 /* ------------------- TITLE CARD ------------------- */
 
 .title-card {
-    z-index: 5;
+    z-index: 9999;
     position: fixed;
     top: 0;
     left: 0;
